kmsrecorderendpoint: Add property to support multiple recording profiles
Change-Id: I37f45eabb8dd841f12677bd21e824792932a409d

--- a/Makefile.am
+++ b/Makefile.am
@@ -6,7 +6,9 @@ plugin_LTLIBRARIES = libgstkurento.la
 
 # variables used for enum generation
 glib_enum_headers = kmsuriendpointstate.h \
-                kmshttpendpointmethod.h
+                kmshttpendpointmethod.h \
+                kmsrecordingprofile.h
+
 glib_enum_define = KMS
 glib_gen_prefix = __kms
 glib_gen_basename = kms
