Add stub for agnosticbin2
Change-Id: I65e1e002d704a9221582d8b282563a898de1be9b

--- a/Makefile.am
+++ b/Makefile.am
@@ -34,6 +34,7 @@ libgstkurento_la_SOURCES = kmsplugin.c \
 			kmsutils.c kmsutils.h \
 			sdp_utils.c sdp_utils.h \
 			kmsagnosticbin.c kmsagnosticbin.h \
+			kmsagnosticbin2.c kmsagnosticbin2.h \
 			kmselement.c kmselement.h \
 			kmsbasesdpendpoint.c kmsbasesdpendpoint.h \
 			kmsbasertpendpoint.c kmsbasertpendpoint.h \
