--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
 
 		<!-- Dependencies Versions -->
 		<gson.version>2.2.4</gson.version>
+		<junit.version>4.11</junit.version>
 
 		<!-- Extensions Versions -->
 		<wagon-ssh.version>2.0</wagon-ssh.version>
@@ -47,6 +48,13 @@
 			<groupId>com.google.code.gson</groupId>
 			<artifactId>gson</artifactId>
 			<version>${gson.version}</version>
+		</dependency>
+
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>${junit.version}</version>
+			<scope>test</scope>
 		</dependency>
 	</dependencies>
 
