Improved message/code error handling
Change-Id: Icbef71a5d29d9086d7b086d1b25dcc062a6efc36

--- a/src/main/resources/kurento-error-codes.properties
+++ b/src/main/resources/kurento-error-codes.properties
@@ -21,7 +21,7 @@
 0=No error;200;0
 
 #Default error
-1=Error;500;-32400
+1=Internal kurento server error;500;-32400
 
 #Standard HTTP error codes are supported so that final developers can use them given that they are well known
 200=OK;200;0
