--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,54 @@
 		<kmf-commons.version>0.0.1-SNAPSHOT</kmf-commons.version>
 	</properties>
 
+	<profiles>
+		<!-- Default values for testing -->
+		<profile>
+			<id>serverAddress</id>
+			<activation>
+				<property>
+					<name>!kurento.serverAddress</name>
+				</property>
+			</activation>
+			<properties>
+				<kurento.serverAddress>localhost</kurento.serverAddress>
+			</properties>
+		</profile>
+		<profile>
+			<id>serverPort</id>
+			<activation>
+				<property>
+					<name>!kurento.serverPort</name>
+				</property>
+			</activation>
+			<properties>
+				<kurento.serverPort>9090</kurento.serverPort>
+			</properties>
+		</profile>
+		<profile>
+			<id>handlerAddress</id>
+			<activation>
+				<property>
+					<name>!kurento.handlerAddress</name>
+				</property>
+			</activation>
+			<properties>
+				<kurento.handlerAddress>localhost</kurento.handlerAddress>
+			</properties>
+		</profile>
+		<profile>
+			<id>handlerPort</id>
+			<activation>
+				<property>
+					<name>!kurento.handlerPort</name>
+				</property>
+			</activation>
+			<properties>
+				<kurento.handlerPort>9191</kurento.handlerPort>
+			</properties>
+		</profile>
+	</profiles>
+
 	<dependencies>
 		<dependency>
 			<groupId>com.kurento.kmf</groupId>
@@ -112,6 +160,12 @@
 			</extension>
 		</extensions>
 
+		<testResources>
+			<testResource>
+				<directory>src/test/resources</directory>
+				<filtering>true</filtering>
+			</testResource>
+		</testResources>
 	</build>
 	<distributionManagement>
 		<site>
