--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
 	<groupId>com.kurento.kmf</groupId>
 	<artifactId>kmf-content-protocol</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>0.0.2-SNAPSHOT</version>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8 </project.build.sourceEncoding>
@@ -59,6 +59,17 @@
 	</dependencies>
 
 	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-release-plugin</artifactId>
+				<version>2.4.2</version>
+				<configuration>
+					<pushChanges>false</pushChanges>
+				</configuration>
+			</plugin>
+		</plugins>
+
 		<extensions>
 			<extension>
 				<groupId>org.apache.maven.wagon</groupId>
@@ -105,5 +116,10 @@
 			<url>scp://repository.kurento.com/opt/tomcat/current/data/repositories/snapshots</url>
 		</snapshotRepository>
 	</distributionManagement>
+	<scm>
+		<url>https://github.com/Kurento/kmf-content-protocol</url>
+		<developerConnection>scm:git:ssh://git@github.com/Kurento/kmf-content-protocol.git</developerConnection>
+                <tag>develop</tag>
+	</scm>
 
 </project>
