--- a/pom.xml
+++ b/pom.xml
@@ -112,6 +112,14 @@
 			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-release-plugin</artifactId>
+				<version>2.4.2</version>
+				<configuration>
+					<pushChanges>false</pushChanges>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
 				<version>2.12</version>
 			</plugin>
@@ -167,5 +175,8 @@
 			</snapshots>
 		</repository>
 	</repositories>
-
+	<scm>
+		<developerConnection>scm:git:https://github.com/Kurento/kmf-media-api</developerConnection>
+                <tag>develop</tag>
+	</scm>
 </project>
