Added HTTP standard error codes
Change-Id: Id1a02e101707afa9a791e2d9dc7ab511a93d6b52

--- a/src/main/resources/kurento-error-codes.properties
+++ b/src/main/resources/kurento-error-codes.properties
@@ -16,7 +16,6 @@
 # should be used only for general purposes, for fine grained descriptions, a new exception code should be defined
 
 
-
 #No error
 0=No error;200;0
 
@@ -24,8 +23,47 @@
 1=Internal kurento server error;500;-32400
 
 #Standard HTTP error codes are supported so that final developers can use them given that they are well known
+100=Continue;100;0
+101=Switching Protocols;101;0
 200=OK;200;0
-#TODO: add all HTTP standard error codes 
+201=Created;201;0
+202=Accepted;202;0
+203=Non-Authoritative Information;203;0
+204=No Content;204;0
+205=Reset Content;205;0
+206=Partial Content;206;0
+300=Multiple Choices;300;0
+301=Moved Permanently;301;0
+302=Found;302;0
+303=See Other;303;0
+304=Not Modified;304;0
+305=Use Proxy;305;0
+306=Unused;306;0
+307=Temporary Redirect;307;0
+400=Bad Request;400;-32500
+401=Unauthorized;401;-32500
+402=Payment Required;402;-32500
+403=Forbidden;403;-32500
+404=Not Found;404;-32601
+405=Method Not Allowed;405;-32500
+406=Not Acceptable;406;-32500
+407=Proxy Authentication Required;407;-32500
+408=Request Timeout;408;-32500
+409=Conflict;409;-32500
+410=Gone;410;-32500
+411=Length Required;411;-32500
+412=Precondition Failed;412;-32500
+413=Request Entity Too Large;413;-32500
+414=Request-URI Too Long;414;-32500
+415=Unsupported Media Type;415;-32500
+416=Requested Range Not Satisfiable;416;-32500
+417=Expectation Failed;417;-32500
+500=Internal Server Error;500;-32400
+501=Not Implemented;501;-32400
+502=Bad Gateway;502;-32400
+503=Service Unavailable;503;-32400
+504=Gateway Timeout;504;-32400
+505=HTTP Version Not Supported;505;-32400
 
 #Exception thrown by handler implementation code
 9999=Exception thrown by handler implementation code;500;-32400
@@ -62,7 +100,6 @@
 10028=Illegal argument;500;-32500
 10029=Illegal event type;406;-32602
 10030=Illegal argument;500;-32500
-
 
 # Internal framework errors
 20000=Internal Server Error;500;-32603
@@ -102,10 +139,6 @@
 20040=Error starting HTTP Recorder with Media Elements;500;-32400
 20041=Error starting HTTP Recorder with sink Media Element;500;-32400
 
-
 #Media server error
 30000=Todo;500;-32400
-
-
-
 
