--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,20 @@
 	</properties>
 
 	<name>Kurento Media Framework - Content Protocol</name>
+	<description>
+			Protocol based on JSON-RPC to manage Kurento Content API
+
+			The kmf-content-protocol is a JSON-RPC protocol to manage Kurento Content API.
+	</description>
+	<url>https://github.com/Kurento/kmf-content-protocol</url>
+	<packaging>jar</packaging>
+	<licenses>
+		<license>
+			<name>GNU Lesser General Public License</name>
+			<url>http://www.gnu.org/licenses/lgpl-2.1.txt</url>
+			<distribution>repo</distribution>
+		</license>
+	</licenses>
 
 	<organization>
 		<name>Kurento</name>
@@ -118,8 +132,9 @@
 	</distributionManagement>
 	<scm>
 		<url>https://github.com/Kurento/kmf-content-protocol</url>
-		<developerConnection>scm:git:ssh://git@github.com/Kurento/kmf-content-protocol.git</developerConnection>
-                <tag>develop</tag>
+		<connection>scm:git:https://github.com/Kurento/kmf-content-protocol.git</connection>
+		<developerConnection>scm:git:ssh://repository.kurento.com:12345/kmf-content-protocol</developerConnection>
+		<tag>develop</tag>
 	</scm>
 
 </project>
