--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 
 	<groupId>com.kurento.kmf</groupId>
 	<artifactId>kmf-content-protocol</artifactId>
-	<version>1.0.0</version>
+	<version>1.0.1-SNAPSHOT</version>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8 </project.build.sourceEncoding>
@@ -96,7 +96,7 @@
 		<url>https://github.com/Kurento/kmf-content-protocol</url>
 		<connection>scm:git:https://github.com/Kurento/kmf-content-protocol.git</connection>
 		<developerConnection>scm:git:ssh://repository.kurento.com:12345/kmf-content-protocol</developerConnection>
-		<tag>kmf-content-protocol-1.0.0</tag>
+		<tag>develop</tag>
 	</scm>
 
 </project>
