Using SockJS when generating browser version
Change-Id: I3848946a35852d01f6f2702c103b6758457ffa84

--- a/package.json
+++ b/package.json
@@ -53,7 +53,14 @@
     "grunt-jsdoc": "latest",
     "nock": "latest",
     "nodeunit": "latest",
+    "deglobalify" : "latest",
+    "deamdify": "latest",    
     "qunit": "~0.5.18",
     "wock": "latest"
+  },
+
+  "browser":
+  {
+    "ws": "./shims/sockjs-0.3.js"
   }
 }
