--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,8 @@
 		<kmf-media-api.version>2.0.0</kmf-media-api.version>
 		<kmf-content-protocol.version>1.0.0</kmf-content-protocol.version>
 		<kmf-commons.version>1.0.0</kmf-commons.version>
-		<kmf-spring.version>1.0.1</kmf-spring.version>
+		<kmf-spring.version>1.0.2-SNAPSHOT</kmf-spring.version>
+		<kmf-repository-api.version>0.5.0-SNAPSHOT</kmf-repository-api.version>
 		<servlet-api.version>3.0.1</servlet-api.version>
 		<httpclient.version>4.2.5</httpclient.version>
 		<gson.version>2.2.4</gson.version>
@@ -88,6 +89,11 @@
 			<groupId>com.kurento.kmf</groupId>
 			<artifactId>kmf-content-protocol</artifactId>
 			<version>${kmf-content-protocol.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>com.kurento.kmf</groupId>
+			<artifactId>kmf-repository-api</artifactId>
+			<version>${kmf-repository-api.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>com.kurento.kmf</groupId>
