Changed public IPs in kurento.properties to 127.0.0.1
Change-Id: Iadb0d235f158ae9742e8bd074fa71be4edbb7c3b

--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
 	<version>1.0.0-SNAPSHOT</version>
 
 	<groupId>com.kurento.kmf</groupId>
-	<artifactId>content-demo</artifactId>
+	<artifactId>kmf-content-demo</artifactId>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8 </project.build.sourceEncoding>
