--- a/pom.xml
+++ b/pom.xml
@@ -98,7 +98,7 @@
 									<type>jar</type>
 									<overWrite>true</overWrite>
 									<outputDirectory>${basedir}/target/${project.artifactId}-${project.version}</outputDirectory>
-									<includes>**/*.*</includes>
+									<includes>js/*.*</includes>
 								</artifactItem>
 							</artifactItems>
 						</configuration>
