platedetector: Add trained data as part of the project
Change-Id: I30ed5aca945c0a011c9007eb8f54d1982be9f542

--- a/filters/platedetector/Makefile.am
+++ b/filters/platedetector/Makefile.am
@@ -24,5 +24,8 @@ libplatedetector_la_LIBADD = $(GST_LIBS) $(OPENCV_LIBS) -ltesseract
 libplatedetector_la_LDFLAGS = $(GST_PLUGIN_LDFLAGS)
 libplatedetector_la_LIBTOOLFLAGS = --tag=disable-static
 
+libplatedetector_ladir = $(datadir)/@PACKAGE@/tessdata
+libplatedetector_la_DATA = tessdata/plateLanguage.traineddata
+
 endif
 endif
