Add KmsHttpPost object skelleton
This class is expected to process POST requests even if they are
clasic POST data in raw mode or multpart.

Change-Id: Ied606904856dc8bb2f12e9a9b3c6f72ab7ac70c1

--- a/httpepserver/CMakeLists.txt
+++ b/httpepserver/CMakeLists.txt
@@ -19,10 +19,12 @@ find_package(LibSoup REQUIRED)
 
 SET(HTTP_EP_SOURCES
   KmsHttpEPServer.cpp
+  KmsHttpPost.cpp
 )
 
 SET(HTTP_EP_HEADERS
   KmsHttpEPServer.h
+  KmsHttpPost.h
 )
 
 set(ENUM_HEADERS
