--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 
 	<groupId>com.kurento.kmf</groupId>
 	<artifactId>kmf-commons</artifactId>
-	<version>1.0.0</version>
+	<version>1.0.1-SNAPSHOT</version>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8 </project.build.sourceEncoding>
@@ -100,7 +100,7 @@
 		<url>https://github.com/Kurento/kmf-commons</url>
 		<connection>scm:git:https://github.com/Kurento/kmf-commons.git</connection>
 		<developerConnection>scm:git:ssh://git@github.com:Kurento/kmf-commons.git</developerConnection>
-		<tag>kmf-commons-1.0.0</tag>
+		<tag>develop</tag>
 	</scm>
 
 </project>
