--- a/pom.xml
+++ b/pom.xml
@@ -45,13 +45,13 @@
 		<maven.compiler.target>1.6</maven.compiler.target>
 
 		<!-- Dependencies version -->
-		<kms-interface.version>3.0.0-4-SNAPSHOT</kms-interface.version>
+		<kms-interface.version>3.0.1</kms-interface.version>
 		<junit.version>4.10</junit.version>
 		<slf4j.version>1.6.4</slf4j.version>
 		<cglib.version>2.2.2</cglib.version>
 		<spring.version>3.1.4.RELEASE</spring.version>
 		<commons-pool.version>1.6</commons-pool.version>
-		<kmf-commons.version>0.0.1-SNAPSHOT</kmf-commons.version>
+		<kmf-commons.version>1.0.0</kmf-commons.version>
 	</properties>
 
 	<dependencies>
