Disable play button while playing (in HTML test pages)
Change-Id: Ib8728fd26ef754c47ab8a72d31454e0f3cdd15f1

--- a/pom.xml
+++ b/pom.xml
@@ -98,7 +98,7 @@
 									<type>jar</type>
 									<overWrite>true</overWrite>
 									<outputDirectory>${basedir}/target/${project.artifactId}-${project.version}</outputDirectory>
-									<includes>js/*.*</includes>
+									<includes>**/*.*</includes>
 								</artifactItem>
 							</artifactItems>
 						</configuration>
