--- a/pom.xml
+++ b/pom.xml
@@ -14,10 +14,10 @@
 		<maven.compiler.target>1.6</maven.compiler.target>
 
 		<!-- Dependencies Versions -->
-		<kmf-media-api.version>2.0.0-SNAPSHOT</kmf-media-api.version>
-		<kmf-content-protocol.version>1.0.1-SNAPSHOT</kmf-content-protocol.version>
-		<kmf-commons.version>0.0.1-SNAPSHOT</kmf-commons.version>
-		<kmf-spring.version>0.0.1-SNAPSHOT</kmf-spring.version>
+		<kmf-media-api.version>2.0.0</kmf-media-api.version>
+		<kmf-content-protocol.version>1.0.0</kmf-content-protocol.version>
+		<kmf-commons.version>1.0.0</kmf-commons.version>
+		<kmf-spring.version>1.0.1</kmf-spring.version>
 		<servlet-api.version>3.0.1</servlet-api.version>
 		<httpclient.version>4.2.5</httpclient.version>
 		<gson.version>2.2.4</gson.version>
