--- a/pom.xml
+++ b/pom.xml
@@ -19,8 +19,8 @@
 		<servlet-api.version>3.0.1</servlet-api.version>
 		<slf4j-api.version>1.7.5</slf4j-api.version>
 		<cors-filter.version>1.7.1</cors-filter.version>
-		<kmf-content-api.version>1.0.0-SNAPSHOT</kmf-content-api.version>
-		<kws-content-api.version>1.0.0-SNAPSHOT</kws-content-api.version>
+		<kmf-content-api.version>1.0.0</kmf-content-api.version>
+		<kws-content-api.version>1.0.0</kws-content-api.version>
 
 		<!-- Plugins Versions -->
 		<maven-war-plugin.version>2.3</maven-war-plugin.version>
@@ -29,6 +29,49 @@
 		<!-- Extensions Versions -->
 		<wagon-ssh.version>2.0</wagon-ssh.version>
 	</properties>
+
+	<name>Kurento Media Framework - Demo</name>
+	<description>
+		Kurento Media Framework base demo
+
+		Implements several examples of use of kurento content-api
+		and kurento media-api.
+	</description>
+
+	<url>https://github.com/Kurento/kmf-content-demo</url>
+
+	<licenses>
+		<license>
+			<name>GNU Lesser General Public License</name>
+			<url>http://www.gnu.org/licenses/lgpl-2.1.txt</url>
+			<distribution>repo</distribution>
+		</license>
+	</licenses>
+
+	<organization>
+		<name>Kurento</name>
+		<url>http://www.kurento.com</url>
+	</organization>
+
+	<developers>
+		<developer>
+			<id>llopez</id>
+			<name>Luis López Fernández</name>
+		</developer>
+		<developer>
+			<id>bgarcia</id>
+			<name>Boni García Gutiérrez</name>
+		</developer>
+	</developers>
+
+	<mailingLists>
+		<mailingList>
+			<name>Kurento</name>
+			<subscribe>http://groups.google.com/group/kurento/subscribe</subscribe>
+			<post>http://groups.google.com/group/kurento/post</post>
+			<archive>http://groups.google.com/group/kurento/about</archive>
+		</mailingList>
+	</mailingLists>
 
 	<dependencies>
 		<dependency>
@@ -75,6 +118,14 @@
 		<plugins>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-release-plugin</artifactId>
+				<version>2.4.2</version>
+				<configuration>
+					<pushChanges>false</pushChanges>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-war-plugin</artifactId>
 				<version>${maven-war-plugin.version}</version>
 			</plugin>
@@ -108,19 +159,6 @@
 		</plugins>
 	</build>
 
-	<distributionManagement>
-		<repository>
-			<id>releases</id>
-			<name>Kurento releases repository</name>
-			<url>scp://repository.kurento.com/opt/tomcat/current/data/repositories/internal</url>
-		</repository>
-		<snapshotRepository>
-			<id>snapshots</id>
-			<name>Kurento snapshots repository</name>
-			<url>scp://repository.kurento.com/opt/tomcat/current/data/repositories/snapshots</url>
-		</snapshotRepository>
-	</distributionManagement>
-
 	<repositories>
 		<repository>
 			<id>kurento-snapshots</id>
@@ -145,4 +183,11 @@
 			</snapshots>
 		</repository>
 	</repositories>
+	
+		<scm>
+		<url>https://github.com/Kurento/${project.artifactId}</url>
+		<connection>scm:git:https://github.com/Kurento/${project.artifactId}.git</connection>
+		<developerConnection>scm:git:ssh://git@github.com:Kurento/${project.artifactId}.git</developerConnection>
+		<tag>develop</tag>
+	</scm>
 </project>
