--- a/src/main/webapp/WEB-INF/kurento.properties
+++ b/src/main/webapp/WEB-INF/kurento.properties
@@ -1,5 +1,22 @@
+#
+# This configuration file can be located in the following paths (searched in this order):
+#
+# 1. ${jboss.server.config.dir}/kurento.properties 
+#    Configuration folder in JBoss, by default: ${jboss.home.dir}/standalone/configuration
+#
+# 2. ${kurento.properties.dir}/kurento.properties
+#    Specific kurento properties folder, passed as JVM argument, for example:
+#    $ mvn verify -Dkurento.properties.dir=/home/user/kurento
+#
+# 3. content-api-test/src/main/webapp/WEB-INF/kurento.properties
+#    Default kurento properties locations. Notice that this file is assuming that serverAddress and handlerAddress 
+#    is deployed on localhost (127.0.0.1). Therefore, for different IP location, change this file or use one of the 
+#    previous options to locate a custom kurento.properties
+#
+
+mediaApiConfiguration.clientPoolSize=50
 contentApiConfiguration.poolCoreSize=20
-mediaApiConfiguration.serverAddress=193.147.51.44
+mediaApiConfiguration.serverAddress=127.0.0.1
 mediaApiConfiguration.serverPort=9090
-mediaApiConfiguration.handlerAddress=193.147.51.4
+mediaApiConfiguration.handlerAddress=127.0.0.1
 mediaApiConfiguration.handlerPort=9100
