--- a/pom.xml
+++ b/pom.xml
@@ -49,7 +49,7 @@
 		<slf4j.version>1.6.4</slf4j.version>
 		<cglib.version>2.2.2</cglib.version>
 		<spring.version>3.1.4.RELEASE</spring.version>
-		<commons-pool.version>1.6</commons-pool.version>
+		<commons-pool.version>2.0</commons-pool.version>
 		<kmf-commons.version>1.0.0</kmf-commons.version>
 	</properties>
 
@@ -98,8 +98,8 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
-			<groupId>commons-pool</groupId>
-			<artifactId>commons-pool</artifactId>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-pool2</artifactId>
 			<version>${commons-pool.version}</version>
 		</dependency>
 	</dependencies>
