facedetector: Create filter to detect faces
Change-Id: I91302ebaecb2c22262de8e1ce350bde1006d72a5

--- a/Makefile.am
+++ b/Makefile.am
@@ -2,7 +2,8 @@ SUBDIRS =				\
 	platedetector			\
 	jackvader			\
 	movementdetector		\
-	h264filter
+	h264filter			\
+	facedetector
 
 plugin_LTLIBRARIES = libkmsfilters.la
 
