--- a/filters/Makefile.am
+++ b/filters/Makefile.am
@@ -2,7 +2,8 @@ SUBDIRS =				\
 	platedetector			\
 	jackvader			\
 	movementdetector		\
-	h264filter
+	h264filter			\
+	facedetector
 
 plugin_LTLIBRARIES = libkmsfilters.la
 
