faceoverlay: Create a filter to overlay images to faces
Change-Id: Ifcee6df1f48b3393468001ea303950e9b1285834

--- a/Makefile.am
+++ b/Makefile.am
@@ -4,7 +4,8 @@ SUBDIRS =				\
 	movementdetector		\
 	h264filter			\
 	facedetector			\
-	imageoverlay
+	imageoverlay			\
+	faceoverlay
 
 plugin_LTLIBRARIES = libkmsfilters.la
 
