--- a/pom.xml
+++ b/pom.xml
@@ -336,6 +336,14 @@
 					<dependencyLocationEnabled>false</dependencyLocationEnabled>
 				</configuration>
 			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-release-plugin</artifactId>
+				<version>2.4.2</version>
+				<configuration>
+					<pushChanges>false</pushChanges>
+				</configuration>
+			</plugin>
 		</plugins>
 	</build>
 
