imageoverlay: Create fiter to overlay an image
Change-Id: Ic6c1bed34f0a230f6cbe9a580986452142492d14

--- a/Makefile.am
+++ b/Makefile.am
@@ -3,7 +3,8 @@ SUBDIRS =				\
 	jackvader			\
 	movementdetector		\
 	h264filter			\
-	facedetector
+	facedetector			\
+	imageoverlay
 
 plugin_LTLIBRARIES = libkmsfilters.la
 
