chroma: Add chroma filter
Change-Id: I835118a2e98def0c2d93aa860abc92d31d611ce2

--- a/Makefile.am
+++ b/Makefile.am
@@ -5,7 +5,8 @@ SUBDIRS =				\
 	h264filter			\
 	facedetector			\
 	imageoverlay			\
-	faceoverlay
+	faceoverlay			\
+	chroma
 
 plugin_LTLIBRARIES = libkmsfilters.la
 
