confcontroller: Add skelleton for controller class to manage internal pipeline reconfiguration
Change-Id: Id9d0954d996b83325d2c3b4da73bdbcc19d9b373

--- a/Makefile.am
+++ b/Makefile.am
@@ -32,6 +32,7 @@ EXTRA_DIST = kms-marshal.list
 libgstkurento_la_SOURCES = kmsplugin.c \
 			$(BUILT_SOURCES) \
                         kmsloop.c kmsloop.h \
+                        kmsconfcontroller.c kmsconfcontroller.h \
 			kmsrecordingprofile.h kmsrecordingprofile.c \
 			kmsutils.c kmsutils.h \
 			sdp_utils.c sdp_utils.h \
