--- a/Makefile.am
+++ b/Makefile.am
@@ -36,7 +36,7 @@ libgstkurento_la_SOURCES = kmsplugin.c \
 			kmsrecordingprofile.h kmsrecordingprofile.c \
 			kmsutils.c kmsutils.h \
 			sdp_utils.c sdp_utils.h \
-			kmsagnosticbin2.c kmsagnosticbin2.h \
+			kmsagnosticbin.c kmsagnosticbin.h \
 			kmselement.c kmselement.h \
 			kmsbasesdpendpoint.c kmsbasesdpendpoint.h \
 			kmsbasertpendpoint.c kmsbasertpendpoint.h \
